--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -21,6 +21,9 @@
 \newcommand\sectionTitle\Large
 \newcommand\problem[1]{\paragraph{#1}}
 \newcommand\sidecomment[1]{ \text{\scriptsize{#1}} }
+\newcommand{\divides}{\mid}
+\newcommand{\notdivides}{\nmid}
+
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
 
