--- a/LinearAlgebraOfPolynomials.tex
+++ b/LinearAlgebraOfPolynomials.tex
@@ -1,27 +1,14 @@
-% This LaTeX was auto-generated from MATLAB code.
-% To make changes, update the MATLAB code and export to LaTeX again.
+\documentclass[MathsNotesBase.tex]{subfiles}
 
-\documentclass{article}
-
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
-\usepackage{graphicx}
-\usepackage{color}
-\usepackage{listings}
-\usepackage{hyperref}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{epstopdf}
-\usepackage[table]{xcolor}
-\usepackage{matlab}
+\date{\vspace{-6ex}}
 
 \sloppy
 \epstopdfsetup{outdir=./}
 \graphicspath{ {./resources/img/LinearAlgebraOfPolynomials_images/} }
 
 \begin{document}
+
+\searchableSubsection{\sectionTitle{Linear Algebra of Polynomials}}{linear algebra, polynomials}{\bigskip}
 
 \begin{par}
 \begin{flushleft}
@@ -30,7 +17,7 @@ If we look for quadratic polynomials, $p\left(x\right)$, that pass throught the 
 \end{par}
 
 \begin{center}
-\includegraphics[width=\maxwidth{56.196688409433015em}]{figure_0}
+\includegraphics[width=\linewidth]{figure_0}
 \end{center}
 
 
@@ -72,7 +59,7 @@ $$\therefore p(x) = \frac{1}{4}(x^2-4x+3)$$
 
 
 \begin{center}
-\includegraphics[width=\maxwidth{56.196688409433015em}]{figure_1}
+\includegraphics[width=\linewidth]{figure_1}
 \end{center}
 
 
@@ -104,7 +91,7 @@ $$\therefore p(x) = -\frac{1}{4}(x^2-6x+5)$$
 
 
 \begin{center}
-\includegraphics[width=\maxwidth{56.196688409433015em}]{figure_2}
+\includegraphics[width=\linewidth]{figure_2}
 \end{center}
 
 
@@ -136,7 +123,7 @@ $$\therefore p(x) = \frac{3}{8}(x^2-8x+15)$$
 
 
 \begin{center}
-\includegraphics[width=\maxwidth{56.196688409433015em}]{figure_3}
+\includegraphics[width=\linewidth]{figure_3}
 \end{center}
 
 
@@ -156,7 +143,7 @@ $$\begin{array}{lcr}
 
 
 \begin{center}
-\includegraphics[width=\maxwidth{56.196688409433015em}]{figure_4}
+\includegraphics[width=\linewidth]{figure_4}
 \end{center}
 
 \end{document}
