--- a/search.tex
+++ b/search.tex
@@ -79,29 +79,29 @@
 
 % -------- test code --------------
 %\iffalse 
-\begin{document}
+%\begin{document}
 %\searchableSection{Section 1}{subsection 1 tag, subsection 2 tag}{
 
-	\searchableSubsection{\huge{Section 1}}{subsection 1 tag, subsection 2 tag}{}
-	
-	\searchableSubsection{Subsection 1}{subsection 1 tag}{
-		blah blah blah, blah blah blah
-	}
-	
-	\searchableSubsection{Subsection 2}{subsection 2 tag}{
-		blah blah blah, blah blah blah
-	}
+%	\searchableSubsection{\huge{Section 1}}{subsection 1 tag, subsection 2 tag}{}
+%	
+%	\searchableSubsection{Subsection 1}{subsection 1 tag}{
+%		blah blah blah, blah blah blah
+%	}
+%	
+%	\searchableSubsection{Subsection 2}{subsection 2 tag}{
+%		blah blah blah, blah blah blah
+%	}
 	
 %}
-\end{document}
+%\end{document}
 %\fi
 
-\iffalse % blows up with 'no line to end here' error because of // at the beginning of subsection content
-\begin{document}
+%\iffalse % blows up with 'no line to end here' error because of // at the beginning of subsection content
+%\begin{document}
 %\searchable{section}{Section Title}{some tags}{
-	\searchable{subsection}{Subsection Title}{some subsection tags}{//
-		blah blah blah, blah blah blah
-	}
+%	\searchable{subsection}{Subsection Title}{some subsection tags}{//
+%		blah blah blah, blah blah blah
+%	}
 %} 
-\end{document}
-\fi
+%\end{document}
+%\fi
