Matrices: properties and algebra

--- a/Abstract Algebra.tex
+++ b/Abstract Algebra.tex
@@ -41,7 +41,7 @@
 		
 		\bigskip\bigskip
 		\subsubsection{Corollaries of the group axioms}
-		The group operation is defined to map a unique tuple in $G \times G$ to a unique value in $G$ we have,
+		The group operation is defined to map a unique tuple in $G \times G$ to a unique value in $G$ so that if we have $x,y \in G$ then $f((x, y)) = f(x,y) = xy \in G$ and for $a,b,c \in G$,
 		\[ a = b \iff (c, a) = (c, b) \implies f((c, a)) = f((c, b)) \iff ca = cb \]
 		\[ \therefore a = b \implies ca = cb \]
 		
@@ -53,8 +53,8 @@
 		\textit{Note} that, since we have used the axioms of inverse and identity and the definitions of these require these elements to exhibit these properties from both the left and the right, the principle of cancellation can also be shown from both the left and the right. So, also,
 		\[ ac = bc \implies a = b \]
 		
-		\bigskip
-		There are (at least) two approaches to finding the other consequences of the group axioms.\\\\
+		\bigskip\bigskip
+		There are (at least) two approaches to finding the other consequences of the group axioms.
 		\paragraph*{First approach.} We begin by noticing that the law of cancellation implies that,
 		\subparagraph*{unique identity and inverses}$\forall a,x,b \in G, ax = b$ has a unique solution because,
 		\[ ax = ax' \iff x = x' \]
